--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,20 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/cart_recycler_view"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_height="@dimen/height_xl"
+                    android:minHeight="@dimen/height_xl"
+                    android:layout_width="match_parent"
+                    android:background="?attr/colorPrimary"
+                    android:elevation="4dp"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="@color/colorAccent"
+                            android:textStyle="bold"
+                            android:text="@string/cart"
+                            android:layout_gravity="center_vertical"
+                            android:textSize="@dimen/font_l"
+                            android:ellipsize="end"/>
+
+                        <ImageView
+                            android:id="@+id/drinks_button"
+                            android:layout_width="@dimen/cart_icon_size"
+                            android:layout_height="@dimen/cart_icon_size"
+                            android:layout_marginRight="@dimen/padding_l"
+                            android:layout_gravity="center_vertical"
+                            android:src="@mipmap/ic_launcher"/>
+
+                    </LinearLayout>
+
+
+                </android.support.v7.widget.Toolbar>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/cart_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/thank_you_for_your_order"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/font_46"
+                android:padding="@dimen/padding_xxxl"
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:textStyle="italic"
+                android:fontFamily="sans-serif-light"
+                android:background="@color/bg_white"
+                android:text="@string/thank_you_for_your_order"
+                android:clickable="true"
+                android:focusable="true"
+                android:visibility="gone"
+                />
+
+        </FrameLayout>
 
         <com.adamkis.pizza.ui.view.CheckoutView
             android:id="@+id/checkout_button"
@@ -30,20 +100,5 @@
         android:padding="0dp"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true" />
-
-    <TextView
-        android:id="@+id/thank_you_for_your_order"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="@dimen/font_46"
-        android:padding="@dimen/padding_xxxl"
-        android:gravity="center"
-        android:textColor="@color/colorAccent"
-        android:textStyle="italic"
-        android:fontFamily="sans-serif-light"
-        android:background="@color/bg_white"
-        android:text="@string/thank_you_for_your_order"
-        android:visibility="gone"
-        />
 
 </android.support.design.widget.CoordinatorLayout>
